I think this will fix wonky code style on mobile

--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -127,13 +127,9 @@ header > nav {
   align-items: center;
   padding: 0 32px 0 32px;
 }
-p > code {
-  padding: 2px;
-  background-color: lightgray;
-}
-code {
-  background-color: lightgray;
+code:not(.highlight code) {
   padding: 3px;
+  background-color: lightgray;
 }
 .highlight > pre > code {
   padding: 0;
@@ -142,8 +138,8 @@ p > a {
   font-weight: 600;
 }
 pre {
-  background: var(--pre-bg-color);
-  padding: 24px;
+  /* background: var(--pre-bg-color); */
+  padding: 16px;
   overflow-x: auto;
 }
 article {
